The logo alignment in header is fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1062,7 +1062,7 @@ section {
      color: #888;
    }
    .nav-logo-wrap .logo img {
-     max-height: 100%;
+     max-height: 80%;
    }
    .nav-logo-wrap .logo span.higl {
      color: #00b2ca;
